@@ -51,6 +51,10 @@ char *cg_upnp_createuuid(char *uuidBuf, int uuidBufSize)
 #if defined(TARGET_OS_IPHONE)
 	uuid_t uuid;
 	char uuidStr[CG_UPNP_UUID_MAX_LEN];
+#elif defined(WIN32)
+	#pragma comment(lib, "Rpcrt4.lib")
+	UUID uuid; 
+	unsigned char* szUuid = NULL;
 #else
 	time_t time1;
 	time_t time2;
@@ -62,25 +66,23 @@ char *cg_upnp_createuuid(char *uuidBuf, int uuidBufSize)
     uuid_generate(uuid);
 	uuid_unparse_lower(uuid, uuidStr);
 	snprintf(uuidBuf,uuidBufSize, "uuid:%s",uuidStr);
+#elif defined(WIN32)
+	UuidCreate(&uuid);
+	UuidToString(&uuid, &szUuid);
+	sprintf(uuidBuf, "%s:%s",
+		CG_UPNP_UUID_NAME,
+		szUuid);
+	RpcStringFree(&szUuid);
 #else
+	/**** Thanks for Makela Aapo (10/30/05) ****/
 	time1 = cg_getcurrentsystemtime();
 	time2 = (time_t)((double)cg_getcurrentsystemtime(NULL) * ((double)rand() / (double)RAND_MAX));
-	/**** Thanks for Makela Aapo (10/30/05) ****/
-#if defined(WIN32)
-	sprintf(uuidBuf, "%s:%04x-%04x-%04x-%04x",
-		CG_UPNP_UUID_NAME,
-		(int)(time1 & 0xFFFF),
-		(int)(((time1 >> 31) | 0xA000) & 0xFFFF),
-		(int)(time2 & 0xFFFF),
-		(int)(((time2 >> 31) | 0xE000) & 0xFFFF));
-#else
 	snprintf(uuidBuf, uuidBufSize, "%s:%04x-%04x-%04x-%04x",
 		CG_UPNP_UUID_NAME,
 		(int)(time1 & 0xFFFF),
 		(int)(((time1 >> 31) | 0xA000) & 0xFFFF),
 		(int)(time2 & 0xFFFF),
 		(int)(((time2 >> 31) | 0xE000) & 0xFFFF));
-#endif
 #endif
 		
 	cg_log_debug_l4("Leaving...\n");
